--- a/src/app/features/login/components/login/login.component.html
+++ b/src/app/features/login/components/login/login.component.html
@@ -2,7 +2,7 @@
     <div class="container rounded-xl my-auto max-w-sm  bg-gray-800 p-3 m-4 custom-shadow shadow-sky-400 ">
       <!-- header -->
       <div class="my-6 text-center">
-        <h1 class="text-3xl font-semibold text-gray-100">TELETICKET</h1>
+        <h1 class="text-3xl font-semibold text-gray-100">ZELECTEC</h1>
         <p class="text-gray-500">Inicio de sesión</p>
       </div>
   
@@ -11,9 +11,9 @@
         <form (ngSubmit)="login()"class="mb-4" #formLogin="ngForm">
           <!-- Nombre de usuario -->
           <div class="mb-4">
-          
+    
             <label for="username" class="mb-1 block text-sm text-white">Nombre de usuario</label>
-           
+
             <input 
               type="text" 
               name="username" 
