--- a/src/app/features/reports/components/report-list/report-list.component.html
+++ b/src/app/features/reports/components/report-list/report-list.component.html
@@ -1,1 +1,36 @@
-<p>report-list works!</p>
+<div class="flex h-[80vh] justify-center font-sans">
+    <div class="container rounded-xl my-auto max-w-3xl p-6 m-2 shadow-md border border-sky-300">
+      <!-- Header -->
+      <div class="my-4 text-center">
+        <h1 class="text-3xl font-semibold text-black">Generar Reporte de Órdenes</h1>
+      </div>
+  
+      <!-- Formulario de Fechas -->
+      <div class="m-4 grid grid-cols-1 md:grid-cols-2 gap-4">
+        <div>
+          <label for="fechaInicio" class="block text-sm font-medium text-gray-700">Fecha Inicio:</label>
+          <input type="date" id="fechaInicio" #fechaInicio
+                 class="mt-1 block w-full rounded-md border border-sky-400 shadow-sm focus:border-sky-500 focus:ring-sky-500"/>
+        </div>
+        <div>
+          <label for="fechaFin" class="block text-sm font-medium text-gray-700">Fecha Fin:</label>
+          <input type="date" id="fechaFin" #fechaFin
+                 class="mt-1 block w-full rounded-md border border-sky-400 shadow-sm focus:border-sky-500 focus:ring-sky-500"/>
+        </div>
+      </div>
+  
+      <!-- Botón de Generación de Reporte -->
+      <div class="flex justify-center mt-6">
+        <button (click)="generarReporte(fechaInicio.value, fechaFin.value)"
+                class="bg-sky-600 hover:bg-sky-700 text-white font-bold py-2 px-6 rounded">
+          Generar Reporte
+        </button>
+      </div>
+  
+      <!-- Visualización del PDF -->
+      <div *ngIf="pdfUrl" class="mt-8">
+        <iframe [src]="pdfUrl" width="100%" height="500px" class="rounded-lg border border-gray-300"></iframe>
+      </div>
+    </div>
+  </div>
+  
